fix: fix style and scrollbar style in the global css file

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
     --destructive-foreground: 0 0% 100%;
     --border: 240 5.9% 90%;
     --input: 240 4.9% 83.9%;
-    --ring: 240 5% 64.9%;
+    --ring: 160  84% 39%;
     --radius: 0.2rem;
   }
   .dark {
@@ -48,10 +48,33 @@ body {
     --destructive-foreground: 0 0% 100%;
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
-    --ring: 240 3.8% 46.1%;
+    --ring: 160  84% 39%;
   }
 }
 
-.color {
-  color: #6988ca
-}
+
+
+::-webkit-scrollbar {
+    width: 8px; 
+    height: 8px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px; 
+    border: 2px solid #fff; 
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-track:hover {
+    background-color: hsl(var("--primary"));
+  }
+  
